cards marseille MaJ
ajuster les tailles

--- a/index.html
+++ b/index.html
@@ -137,19 +137,109 @@
                 <h2>Hébergements à Marseille</h2>
 
                 <div class="marseilleCards">
-                    <div class="">
+                    <div class="marseillePhoto">
                         <a href="#">
-                            <img src="" alt="" loading="lazy">
+                            <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannebière" loading="lazy">
                         </a>
                     </div>
-                    <div class="">
-                        <h3></h3>
-                        <span class="prix">Nuit à partir de  <span class="euro">€</span></span>
+                    <div class="marseilleDesc">
+                        <h3>Auberge la Cannebière</h3>
+                        <span class="prix">Nuit à partir de <span class="euro">25€</span></span>
                         <span><i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="far fa-star"></i>
+                        </span>
+                    </div>
+                </div>
+
+                <div class="marseilleCards">
+                    <div class="marseillePhoto">
+                        <a href="#">
+                            <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du Port" loading="lazy">
+                        </a>
+                    </div>
+                    <div class="marseilleDesc">
+                        <h3>Hôtel du Port</h3>
+                        <span class="prix">Nuit à partir de 52<span class="euro">€</span></span>
+                        <span><i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </span>
+                    </div>
+                </div>
+
+                <div class="marseilleCards">
+                    <div class="marseillePhoto">
+                        <a href="#">
+                            <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel Les mouettes" loading="lazy">
+                        </a>
+                    </div>
+                    <div class="marseilleDesc">
+                        <h3>Hôtel Les mouettes</h3>
+                        <span class="prix">Nuit à partir de 76<span class="euro">€</span></span>
+                        <span><i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </span>
+                    </div>
+                </div>
+
+                <div class="marseilleCards">
+                    <div class="marseillePhoto">
+                        <a href="#">
+                            <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer" loading="lazy">
+                        </a>
+                    </div>
+                    <div class="marseilleDesc">
+                        <h3>Hôtel de la mer</h3>
+                        <span class="prix">Nuit à partir de 46<span class="euro">€</span></span>
+                        <span><i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </span>
+                    </div>
+                </div>
+
+                <div class="marseilleCards">
+                    <div class="marseillePhoto">
+                        <a href="#">
+                            <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier" loading="lazy">
+                        </a>
+                    </div>
+                    <div class="marseilleDesc">
+                        <h3>Auberge le Panier</h3>
+                        <span class="prix">Nuit à partir de <span class="euro">23€</span></span>
+                        <span><i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </span>
+                    </div>
+                </div>
+
+                <div class="marseilleCards">
+                    <div class="marseillePhoto">
+                        <a href="#">
+                            <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina" loading="lazy">
+                        </a>
+                    </div>
+                    <div class="marseilleDesc">
+                        <h3>Hôtel chez Amina</h3>
+                        <span class="prix">Nuit à partir de 96<span class="euro">€</span></span>
+                        <span><i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
                         </span>
                     </div>
                 </div>
