maj et début activités

--- a/index.html
+++ b/index.html
@@ -243,7 +243,9 @@
                         </span>
                     </div>
                 </div>
-            
+                <div class="afficher">
+                    <button><h4>Afficher plus</h4></button>
+                </div>
 
             </div>
         </div>     
