--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
                 <span>En plein centre ville ou en pleine nature</span>
             </section>
             <div class="recherche">
-                <label class="map">
+                <label for="rechercher" class="map">
                     <i class="fas fa-map-marker-alt"></i>
                 </label>
                 <div class="searchBar">
-                    <input type="search" name="rechercher" value="Marseille,France" class="barreDeRecherche">
+                    <input type="search" id="rechercher" name="rechercher" placeholder="Marseille,France" class="barreDeRecherche">
                 </div>
                 <button class="search" type="submit">
                     <i class="fas fa-search"></i>
@@ -82,9 +82,11 @@
                 </div>
                 <div>    
                     <div class="cards">
+                        <div class="photo">
                             <a href="#">
                                 <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel du soleil du matin" loading="lazy">
                             </a>
+                        </div>
                         <div class="desc">
                             <h3>Hôtel Le soleil du matin</h3>
                             <span class="prix">Nuit à partir de 128 <span class="euro">€</span></span>
