--- a/index.html
+++ b/index.html
@@ -248,8 +248,80 @@
                 <div class="afficher">
                     <button><h4>Afficher plus</h4></button>
                 </div>
-
+        </div>
+        <!--Activités-->
+        <div class="activiteMarseille">
+            <div>
+                <h2>Activités à Marseille</h2>
             </div>
+            <div class="cardsActivite">
+                <div class="activiteCards">
+                    <div class="activitePhoto">
+                        <a href="#">
+                            <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port" loading="lazy">
+                        </a>
+                    </div>
+                    <div class="activiteDesc">
+                        <h3>Vieux Port</h3>
+                    </div>
+                </div>
+
+                <div class="activiteCards">
+                    <div class="activitePhoto">
+                        <a href="#">
+                            <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues" loading="lazy">
+                        </a>
+                    </div>
+                    <div class="activiteDesc">
+                        <h3>Fort de Pomègues</h3>
+                    </div>
+                </div>
+
+                <div class="activiteCards">
+                    <div class="activitePhoto">
+                        <a href="#">
+                            <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles du Frioul" loading="lazy">
+                        </a>
+                    </div>
+                    <div class="activiteDesc">
+                        <h3>Îles du Frioul</h3>
+                    </div>
+                </div>
+
+                <div class="activiteCards">
+                    <div class="activitePhoto">
+                        <a href="#">
+                            <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National des Calanques" loading="lazy">
+                        </a>
+                    </div>
+                    <div class="activiteDesc">
+                        <h3>Parc National des Calanques</h3>
+                    </div>
+                </div>
+
+                <div class="activiteCards">
+                    <div class="activitePhoto">
+                        <a href="#">
+                            <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde" loading="lazy">
+                        </a>
+                    </div>
+                    <div class="activiteDesc">
+                        <h3>Notre-Dame-de-la-Garde</h3>
+                    </div>
+                </div>
+
+                <div class="activiteCards">
+                    <div class="activitePhoto">
+                        <a href="#">
+                            <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp" loading="lazy">
+                        </a>
+                    </div>
+                    <div class="activiteDesc">
+                        <h3>Parc Longchamp</h3>
+                    </div>
+                </div>
+            </div>
+        </div>   
         </div>     
     </div>
     <footer>
