--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <header>
                 <nav>
                     <div class="logo"><img src="images/logo/Reservia.svg" alt="logo Reservia"></div>
-                    <div class="hebergement"><a href="#herbergement">Hébergements</a></div>
+                    <div class="hebergement"><a href="#hebergement">Hébergements</a></div>
                     <div class="activite"><a href="#activite">Activités</a></div>
                     <div class="inscription"><a href="#">S'inscrire</a></div>
                 </nav>
@@ -34,6 +34,7 @@
                 </div>
                 <button class="search" type="submit">
                     <i class="fas fa-search"></i>
+                    <span>Rechercher</span>
                 </button>
             </div>
 
@@ -90,7 +91,8 @@
                         <div class="desc">
                             <h3>Hôtel Le soleil du matin</h3>
                             <span class="prix">Nuit à partir de 128 <span class="euro">€</span></span>
-                            <span><i class="fas fa-star"></i>
+                            <span class="note">
+                                <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -107,7 +109,8 @@
                         <div class="desc">
                             <h3>Au coeur de l'eau Chambre d'hôtes</h3>
                             <span class="prix">Nuit a partir de 71<span class="euro">€</span></span>
-                            <span><i class="fas fa-star"></i>
+                            <span class="note">
+                                <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -124,7 +127,8 @@
                         <div class="desc">
                             <h3>Hôtel Tout bleu et Blanc</h3>
                             <span class="prix">Nuit à partir de 68 <span class="euro">€</span></span>
-                            <span><i class="fas fa-star"></i>
+                            <span class="note">
+                                <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -250,7 +254,7 @@
                 </div>
         </div>
         <!--Activités-->
-        <div class="activiteMarseille">
+        <div id="activite" class="activiteMarseille">
             <div>
                 <h2>Activités à Marseille</h2>
             </div>
@@ -269,7 +273,7 @@
                 <div class="activiteCards">
                     <div class="activitePhoto">
                         <a href="#">
-                            <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues" loading="lazy">
+                            <img class="fort" src="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues" loading="lazy">
                         </a>
                     </div>
                     <div class="activiteDesc">
