--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" type="text/css">
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css2?family=Raleway">
+    <script src="https://kit.fontawesome.com/431707d5aa.js" crossorigin="anonymous"></script>
     <title>Reservia</title>
 </head>
 <body>
@@ -72,7 +73,7 @@
     <!--Info-->        
             <span class="info"><i class="fas fa-info"></i> Plus de 500 logements sont disponibles dans cette villes</span>
     <!--Hébergements-->
-        <div>
+        <div class="hebergements">
             <!--populaires-->
             <div id="hebergement" class="hotel">
                 <div class="populaires">
@@ -140,7 +141,7 @@
             </div>
             <!--Marseille-->
             <div class="marseille">
-                <h2>Hébergements à Marseille</h2>
+                <h2 class="titreHebergementMarseille">Hébergements à Marseille</h2>
 
                 <div class="marseilleCards">
                     <div class="marseillePhoto">
@@ -250,82 +251,92 @@
                     </div>
                 </div>
                 <div class="afficher">
-                    <button><h4>Afficher plus</h4></button>
+                    <button>Afficher plus</button>
                 </div>
+            </div>
         </div>
-        <!--Activités-->
-        <div id="activite" class="activiteMarseille">
-            <div>
-                <h2>Activités à Marseille</h2>
-            </div>
-            <div class="cardsActivite">
-                <div class="activiteCards">
-                    <div class="activitePhoto">
-                        <a href="#">
-                            <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port" loading="lazy">
-                        </a>
-                    </div>
-                    <div class="activiteDesc">
-                        <h3>Vieux Port</h3>
-                    </div>
+        <div>
+            <!--Activités-->
+            <div id="activite" class="activiteMarseille">
+                <div class="titreActivite">
+                    <h2>Activités à Marseille</h2>
                 </div>
+                <div class="cardsActivite">
+                    <div class="colonne1">
+                    <div class="activiteCards">
+                        <div class="activitePhoto">
+                            <a href="#">
+                                <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port" loading="lazy">
+                            </a>
+                        </div>
+                        <div class="activiteDesc">
+                            <h3>Vieux Port</h3>
+                        </div>
+                    </div>
+                    </div>
 
-                <div class="activiteCards">
-                    <div class="activitePhoto">
-                        <a href="#">
-                            <img class="fort" src="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues" loading="lazy">
-                        </a>
+                    <div class="colonne2">
+                    <div class="activiteCards">
+                        <div class="activitePhoto">
+                            <a href="#">
+                                <img class="fort" src="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues" loading="lazy">
+                            </a>
+                        </div>
+                        <div class="activiteDesc">
+                            <h3>Fort de Pomègues</h3>
+                        </div>
                     </div>
-                    <div class="activiteDesc">
-                        <h3>Fort de Pomègues</h3>
-                    </div>
-                </div>
 
-                <div class="activiteCards">
-                    <div class="activitePhoto">
-                        <a href="#">
-                            <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles du Frioul" loading="lazy">
-                        </a>
+                    <div class="activiteCards">
+                        <div class="activitePhoto">
+                            <a href="#">
+                                <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles du Frioul" loading="lazy">
+                            </a>
+                        </div>
+                        <div class="activiteDesc">
+                            <h3>Îles du Frioul</h3>
+                        </div>
                     </div>
-                    <div class="activiteDesc">
-                        <h3>Îles du Frioul</h3>
                     </div>
-                </div>
 
-                <div class="activiteCards">
-                    <div class="activitePhoto">
-                        <a href="#">
-                            <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National des Calanques" loading="lazy">
-                        </a>
+                    <div class="colonne1">
+                    <div class="activiteCards">
+                        <div class="activitePhoto">
+                            <a href="#">
+                                <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National des Calanques" loading="lazy">
+                            </a>
+                        </div>
+                        <div class="activiteDesc">
+                            <h3>Parc National des Calanques</h3>
+                        </div>
                     </div>
-                    <div class="activiteDesc">
-                        <h3>Parc National des Calanques</h3>
                     </div>
-                </div>
 
-                <div class="activiteCards">
-                    <div class="activitePhoto">
-                        <a href="#">
-                            <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde" loading="lazy">
-                        </a>
+                    <div class="colonne2">
+                    <div class="activiteCards">
+                        <div class="activitePhoto">
+                            <a href="#">
+                                <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde" loading="lazy">
+                            </a>
+                        </div>
+                        <div class="activiteDesc">
+                            <h3>Notre-Dame-de-la-Garde</h3>
+                        </div>
                     </div>
-                    <div class="activiteDesc">
-                        <h3>Notre-Dame-de-la-Garde</h3>
-                    </div>
-                </div>
 
-                <div class="activiteCards">
-                    <div class="activitePhoto">
-                        <a href="#">
-                            <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp" loading="lazy">
-                        </a>
+                    <div class="activiteCards">
+                        <div class="activitePhoto">
+                            <a href="#">
+                                <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp" loading="lazy">
+                            </a>
+                        </div>
+                        <div class="activiteDesc">
+                            <h3>Parc Longchamp</h3>
+                        </div>
                     </div>
-                    <div class="activiteDesc">
-                        <h3>Parc Longchamp</h3>
                     </div>
                 </div>
-            </div>
-        </div>   
+            </div>   
         </div>     
     </div>
     <footer>
@@ -349,5 +360,4 @@
         </div>
     </footer>
 </body>
-<script src="https://kit.fontawesome.com/431707d5aa.js" crossorigin="anonymous"></script>
 </html>
