--- a/index.html
+++ b/index.html
@@ -262,79 +262,71 @@
                     <h2>Activités à Marseille</h2>
                 </div>
                 <div class="cardsActivite">
-                    <div class="colonne1">
+                    <a href="#" class="vieuxPort">
+                        <div class="activiteCards">
+                            <div class="activitePhoto">
+                                <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port" loading="lazy" class="port">
+                            </div>
+                            <div class="activiteDesc">
+                                <h3>Vieux Port</h3>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#" class="fort">
                     <div class="activiteCards">
                         <div class="activitePhoto">
-                            <a href="#">
-                                <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port" loading="lazy">
-                            </a>
-                        </div>
-                        <div class="activiteDesc">
-                            <h3>Vieux Port</h3>
-                        </div>
-                    </div>
-                    </div>
-
-                    <div class="colonne2">
-                    <div class="activiteCards">
-                        <div class="activitePhoto">
-                            <a href="#">
-                                <img class="fort" src="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues" loading="lazy">
-                            </a>
+                                <img src="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues" loading="lazy">
                         </div>
                         <div class="activiteDesc">
                             <h3>Fort de Pomègues</h3>
                         </div>
                     </div>
+                    </a>
 
+                    <a href="#" class="frioul">
                     <div class="activiteCards">
                         <div class="activitePhoto">
-                            <a href="#">
                                 <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles du Frioul" loading="lazy">
-                            </a>
                         </div>
                         <div class="activiteDesc">
                             <h3>Îles du Frioul</h3>
                         </div>
                     </div>
-                    </div>
+                    </a>
 
-                    <div class="colonne1">
+                    <a href="#" class="calanques">
                     <div class="activiteCards">
                         <div class="activitePhoto">
-                            <a href="#">
-                                <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National des Calanques" loading="lazy">
-                            </a>
+                                <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National des Calanques" loading="lazy" class="parc">
                         </div>
                         <div class="activiteDesc">
                             <h3>Parc National des Calanques</h3>
                         </div>
                     </div>
-                    </div>
+                    </a>
 
-                    <div class="colonne2">
+                    <a href="#" class="dame">
                     <div class="activiteCards">
                         <div class="activitePhoto">
-                            <a href="#">
                                 <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde" loading="lazy">
-                            </a>
                         </div>
                         <div class="activiteDesc">
                             <h3>Notre-Dame-de-la-Garde</h3>
                         </div>
                     </div>
+                    </a>
 
+                    <a href="#" class="longchamp">
                     <div class="activiteCards">
                         <div class="activitePhoto">
-                            <a href="#">
                                 <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp" loading="lazy">
-                            </a>
                         </div>
                         <div class="activiteDesc">
                             <h3>Parc Longchamp</h3>
                         </div>
                     </div>
-                    </div>
+                    </a>
+
                 </div>
             </div>   
         </div>     
