--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </section>
             
     <!--Info-->        
-            <span class="info"><i class="fas fa-info"></i> Plus de 500 logements sont disponibles dans cette villes</span>
+            <span class="info"><i class="fas fa-info"></i> Plus de 500 logements sont disponibles dans cette ville</span>
     <!--Hébergements-->
         <div class="hebergements">
             <!--populaires-->
@@ -91,7 +91,7 @@
                         </div>
                         <div class="desc">
                             <h3>Hôtel Le soleil du matin</h3>
-                            <span class="prix">Nuit à partir de 128 <span class="euro">€</span></span>
+                            <span class="prix">Nuit à partir de 128<span class="euro">€</span></span>
                             <span class="note">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
