--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" type="text/css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/431707d5aa.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css" type="text/css">
     <title>Reservia</title>
 </head>
 <body>
@@ -44,35 +44,29 @@
             <section>
                 <h2>Filtres</h2>
                 <div  class="filtres">
-                    <div class="filtre eco">
-                        <button>
+                        <button class="eco">
                             <i class="fas fa-money-bill-wave"></i>
                             <span>Economique</span>
                         </button>
-                    </div>
-                    <div class=" filtre famille">
-                        <button>
+                        <button class="famille">
                             <i class="fas fa-child"></i>
                             <span>Familial</span>
                         </button>
-                    </div>
-                    <div class="filtre romantique">
-                        <button>
+                        <button class="romantique">
                             <i class="fas fa-heart"></i>
                             <span>Romantique</span>
                         </button>
-                    </div>
-                    <div class="filtre pets">
-                        <button type="submit">
+                        <button class="pets">
                             <i class="fas fa-dog"></i>
                             <span>Animaux autorisés</span>
                         </button>
-                    </div>
                 </div>
             </section>
-            
-    <!--Info-->        
-            <span class="info"><i class="fas fa-info"></i> Plus de 500 logements sont disponibles dans cette ville</span>
+    <!--Info-->
+        <div class="information"> 
+            <i class="fas fa-info"></i>
+            <span class="info">Plus de 500 logements sont disponibles dans cette ville</span>
+        </div>
     <!--Hébergements-->
         <div class="hebergements">
             <!--populaires-->
