--- a/index.html
+++ b/index.html
@@ -15,10 +15,18 @@
     <div class="page">
             <!-- Header-->
             <header>
-                    <div class="logo"><img src="images/logo/Reservia.svg" alt="logo Reservia"></div>
-                    <div class="hebergement"><a href="#hebergement">Hébergements</a></div>
-                    <div class="activite"><a href="#activite">Activités</a></div>
-                    <div class="inscription"><a href="#">S'inscrire</a></div>
+                    <div class="logo">
+                        <img src="images/logo/Reservia.svg" alt="logo Reservia">
+                    </div>
+                    <div class="hebergement">
+                        <a href="#hebergement">Hébergements</a>
+                    </div>
+                    <div class="activite">
+                        <a href="#activite">Activités</a>
+                    </div>
+                    <div class="inscription">
+                        <a href="#">S'inscrire</a>
+                    </div>
 
             </header>
             <!--Présentation et Recherche-->
@@ -109,7 +117,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                                <i class="far fa-star"></i>
+                                <i class="fas fa-star black"></i>
                             </span>
                         </div>
                     </div>
@@ -127,7 +135,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                                <i class="far fa-star"></i>
+                                <i class="fas fa-star black"></i>
                             </span>
                         </div>
                     </div>
@@ -150,7 +158,7 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
-                            <i class="far fa-star"></i>
+                            <i class="fas fa-star black"></i>
                         </span>
                     </div>
                 </div>
@@ -186,7 +194,7 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
-                            <i class="far fa-star"></i>
+                            <i class="fas fa-star black"></i>
                         </span>
                     </div>
                 </div>
@@ -203,8 +211,8 @@
                         <span><i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
-                            <i class="far fa-star"></i>
-                            <i class="far fa-star"></i>
+                            <i class="fas fa-star black"></i>
+                            <i class="fas fa-star black"></i>
                         </span>
                     </div>
                 </div>
@@ -222,7 +230,7 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
-                            <i class="far fa-star"></i>
+                            <i class="fas fa-star black"></i>
                         </span>
                     </div>
                 </div>
