--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     <div class="page">
             <!-- Header-->
             <header>
+                <nav>
                     <div class="logo">
                         <img src="images/logo/Reservia.svg" alt="logo Reservia">
                     </div>
-
+                    
                         <a href="#hebergement" class="hebergement">
                             Hébergements
                         </a>
@@ -30,6 +31,7 @@
                         <a href="#" class="inscription">
                             S'inscrire
                         </a>
+                    </nav>
             </header>
             <!--Présentation et Recherche-->
             <section>
@@ -54,8 +56,7 @@
                 <h2>Filtres</h2>
                 <div  class="filtres">
                         <button class="eco">
-                            <i class="fas fa-money-bill-wave"></i>
-                            <span>Economique</span>
+                            <i class="fas fa-money-bill-wave"></i>     <span>Economique</span>
                         </button>
                         <button class="famille">
                             <i class="fas fa-child"></i>
