--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </nav>
             </header>
             <!--Présentation et Recherche-->
-            <section>
+            <section class="presentation">
                 <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
                 <span>En plein centre ville ou en pleine nature</span>
             </section>
@@ -56,7 +56,8 @@
                 <h2>Filtres</h2>
                 <div  class="filtres">
                         <button class="eco">
-                            <i class="fas fa-money-bill-wave"></i>     <span>Economique</span>
+                            <i class="fas fa-money-bill-wave"></i>
+                            <span>Economique</span>
                         </button>
                         <button class="famille">
                             <i class="fas fa-child"></i>
