changement sur nav
reprise entiere de la nav

--- a/index.html
+++ b/index.html
@@ -16,22 +16,24 @@
             <!-- Header-->
             <header>
                 <nav>
-                    <div class="logo">
                         <img src="images/logo/Reservia.svg" alt="logo Reservia">
-                    </div>
-                    
-                        <a href="#hebergement" class="hebergement">
+                
+                    <div class="hebergement">
+                        <a href="#hebergement" >
                             Hébergements
                         </a>
-
-                        <a href="#activite" class="activite">
+                    </div>
+                    <div class="activite">
+                        <a href="#activite" >
                             Activités
                         </a>
-
-                        <a href="#" class="inscription">
+                    </div>
+                    <div class="inscription">
+                        <a href="#" >
                             S'inscrire
                         </a>
-                    </nav>
+                    </div>
+                </nav>
             </header>
             <!--Présentation et Recherche-->
             <section class="presentation">
