--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
             <div class="aPropos">
                 <h4>A propos</h4>
                 <a href="#">Fonctionnement du site</a> 
-                <a href="#">Condition générales de vente</a> 
+                <a href="#">Conditions générales de vente</a> 
                 <a href="#">Données et confidentialité</a> 
             </div>
             <div class="nosHebergements">
