premier jet final

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
 
             <!-- Filtres-->    
-            <section>
+            <section class="sectionFiltre">
                 <h2 class="titreFiltre">Filtres</h2>
                 <div  class="filtres">
                         <button class="eco">
@@ -276,7 +276,7 @@
                     <a href="#" class="vieuxPort">
                         <div class="activiteCards">
                             <div class="activitePhoto">
-                                <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port" loading="lazy" class="port">
+                                <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port" loading="lazy">
                             </div>
                             <div class="activiteDesc">
                                 <h3>Vieux Port</h3>
@@ -308,7 +308,7 @@
                     <a href="#" class="calanques">
                     <div class="activiteCards">
                         <div class="activitePhoto">
-                                <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National des Calanques" loading="lazy" class="parc">
+                                <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National des Calanques" loading="lazy">
                         </div>
                         <div class="activiteDesc">
                             <h3>Parc National des Calanques</h3>
